@@ -1,143 +1,144 @@
-/****************************************************************************
+/*-
+ * Copyright (c) 1992, 1993
+ *	The Regents of the University of California.  All rights reserved.
  *
- * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/strtoll.c,v $
- * $Date: 2004/01/06 00:17:36 $
- * $Revision: 1.5 $
- * $State: Exp $
- * $Author: joty $
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ * 3. All advertising materials mentioning features or use of this software
+ *    must display the following acknowledgement:
+ *	This product includes software developed by the University of
+ *	California, Berkeley and its contributors.
+ * 4. Neither the name of the University nor the names of its contributors
+ *    may be used to endorse or promote products derived from this software
+ *    without specific prior written permission.
  *
- ***************************************************************************/
+ * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
+ * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
+ * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+ * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
+ * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ * SUCH DAMAGE.
+ */
 
-#ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: strtoll.c,v 1.5 2004/01/06 00:17:36 joty Exp $";
-#endif
+#if defined(LIBC_SCCS) && !defined(lint)
+static char sccsid[] = "@(#)strtoq.c	8.1 (Berkeley) 6/4/93";
+#endif /* LIBC_SCCS and not lint */
+#include <sys/cdefs.h>
+/*__FBSDID("$FreeBSD: src/lib/libc/stdlib/strtoll.c,v 1.21 2005/01/21 13:31:02 ache Exp $");*/
 
+#include <limits.h>
+#include <errno.h>
 #include <ctype.h>
 #include <stdlib.h>
-#include <errno.h>
-#include <limits.h>
 
-#undef atoll
-long long atoll (const char *s)
-{
-  return strtoll (s, (char **) NULL, 10);
-}
-
+/*
+ * Convert a string to a long long integer.
+ *
+ * Assumes that the upper and lower case
+ * alphabets and digits are each contiguous.
+ */
 long long
-strtoll (const char *nptr, char **end, int base)
+strtoll(const char * __restrict nptr, char ** __restrict endptr, int base)
 {
-  int negative = 0;
-  int overflow;
-  unsigned int digit;
-  unsigned long long result;
-  unsigned long long cutoff;
-  unsigned long cutlim;
-  const char *s, *save;
+	const char *s;
+	unsigned long long acc;
+	char c;
+	unsigned long long cutoff;
+	int neg, any, cutlim;
 
-  if (!nptr)
-    return 0;
-
-  if (base < 0 || base == 1 || base > 36)
-    return __set_errno (EINVAL);
-
-  save = s = nptr;
-  /* Skip white space.  */
-  while (isspace (*s))
-    s++;
-
-  if (*s == '+' || *s == '-')
-    {
-      if (*s == '-')
-	negative = 1;
-      s++;
-    }
-
-  if (base == 16 && s[0] == '0' && toupper (s[1]) == 'X')
-    s += 2;
-
-  /* Try guessing the base.  */
-  if (base == 0)
-    {
-      if (*s == '0')
-	{
-	  if (toupper (s[1]) == 'X')
-	    {
-	      s += 2;
-	      base = 16;
-	    }
-	  else
-	    base = 8;
+	/*
+	 * Skip white space and pick up leading +/- sign if any.
+	 * If base is 0, allow 0x for hex and 0 for octal, else
+	 * assume decimal; if base is already 16, allow 0x.
+	 */
+	s = nptr;
+	do {
+		c = *s++;
+	} while (isspace((unsigned char)c));
+	if (c == '-') {
+		neg = 1;
+		c = *s++;
+	} else {
+		neg = 0;
+		if (c == '+')
+			c = *s++;
 	}
-      else
-	base = 10;
-    }
-
-  /* Save the pointer so we can check later if anything happened.  */
-  save = s;
-
-  cutoff = ULONG_LONG_MAX / (unsigned long) base;
-  cutlim = ULONG_LONG_MAX % (unsigned long) base;
-
-  overflow = 0;
-  result = 0;
-  for (digit = *s; digit != '\0'; digit = *++s)
-    {
-      if (digit >= '0' && digit <= '9')
-	digit -= '0';
-      else if (isalpha (digit))
-	digit = toupper (digit) - 'A' + 10;
-      else
-	break;
-      if (digit >= base)
-	break;
-      /* Overflow checks. */
-      if (result > cutoff || (result == cutoff && digit > cutlim))
-	overflow = 1;
-      else
-	{
-	  result *= (unsigned long) base;
-	  result += digit;
+	if ((base == 0 || base == 16) &&
+	    c == '0' && (*s == 'x' || *s == 'X') &&
+	    ((s[1] >= '0' && s[1] <= '9') ||
+	    (s[1] >= 'A' && s[1] <= 'F') ||
+	    (s[1] >= 'a' && s[1] <= 'f'))) {
+		c = s[1];
+		s += 2;
+		base = 16;
 	}
-    }
-  if (s == save)
-    {
-      if (end != NULL)
-	{
-	  /* Special case, the base is zero or hexadecimal and the
-	     first two chars are 0x, but nothing else follows. This
-	     isn't an error.  */
-	  if ((save - nptr) >= 2 && toupper (save[-1]) == 'X' && save[-2] == '0')
-	    *end = (char *) &save[-1];
-	  else
-	    *end = (char *) nptr;
-	}
-      return 0;
-    }
+	if (base == 0)
+		base = c == '0' ? 8 : 10;
+	acc = any = 0;
+	if (base < 2 || base > 36)
+		goto noconv;
 
-  /* Store the address of one character past the last we converted.  */
-  if (end)
-    *end = (char *) s;
-
-  if (overflow == 0)
-    {
-      /* Check for a value that is within the range of
-         an unsigned long but outside the range of long.  */
-      if (negative)
-        {
-	  if (result > (unsigned long) LONG_LONG_MIN)
-	    overflow = 1;
+	/*
+	 * Compute the cutoff value between legal numbers and illegal
+	 * numbers.  That is the largest legal value, divided by the
+	 * base.  An input number that is greater than this value, if
+	 * followed by a legal input character, is too big.  One that
+	 * is equal to this value may be valid or not; the limit
+	 * between valid and invalid numbers is then based on the last
+	 * digit.  For instance, if the range for quads is
+	 * [-9223372036854775808..9223372036854775807] and the input base
+	 * is 10, cutoff will be set to 922337203685477580 and cutlim to
+	 * either 7 (neg==0) or 8 (neg==1), meaning that if we have
+	 * accumulated a value > 922337203685477580, or equal but the
+	 * next digit is > 7 (or 8), the number is too big, and we will
+	 * return a range error.
+	 *
+	 * Set 'any' if any `digits' consumed; make it negative to indicate
+	 * overflow.
+	 */
+	cutoff = neg ? (unsigned long long)-(LLONG_MIN + LLONG_MAX) + LLONG_MAX
+	    : LLONG_MAX;
+	cutlim = cutoff % base;
+	cutoff /= base;
+	for ( ; ; c = *s++) {
+		if (c >= '0' && c <= '9')
+			c -= '0';
+		else if (c >= 'A' && c <= 'Z')
+			c -= 'A' - 10;
+		else if (c >= 'a' && c <= 'z')
+			c -= 'a' - 10;
+		else
+			break;
+		if (c >= base)
+			break;
+		if (any < 0 || acc > cutoff || (acc == cutoff && c > cutlim))
+			any = -1;
+		else {
+			any = 1;
+			acc *= base;
+			acc += c;
+		}
 	}
-      else
-        {
-	  if (result > (unsigned long) LONG_LONG_MAX)
-	    overflow = 1;
-	}
-    }
-  if (overflow)
-    {
-      (void) __set_errno (ERANGE);
-      return (negative) ? LONG_LONG_MIN : LONG_LONG_MAX;
-    }
-
-  return (negative ? -result : result);
+	if (any < 0) {
+		acc = neg ? LLONG_MIN : LLONG_MAX;
+		errno = ERANGE;
+	} else if (!any) {
+noconv:
+		errno = EINVAL;
+	} else if (neg)
+		acc = -acc;
+	if (endptr != NULL)
+		*endptr = (char *)(any ? s - 1 : nptr);
+	return (acc);
 }
